Fix overlap alignment in search input tracks

--- a/src/scss/common/_inputs.scss
+++ b/src/scss/common/_inputs.scss
@@ -338,6 +338,7 @@ input[type=radio] {
     grid-area: a;
     background: transparent;
     font-size: 13px;
+    line-height: 20px;
     letter-spacing: 0;
     text-transform: lowercase;
     padding: 0;
